RESOLVED FIXED213420
Fix build error with release build and "#define LOG_DISABLED 0"
https://bugs.webkit.org/show_bug.cgi?id=213420
Summary Fix build error with release build and "#define LOG_DISABLED 0"
Simon Fraser (smfr)
Reported 2020-06-19 17:21:32 PDT
Fix build error with release build and "#define LOG_DISABLED 0"
Attachments
Patch (1.89 KB, patch)
2020-06-19 17:22 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-06-19 17:22:08 PDT
EWS
Comment 2 2020-06-22 10:01:23 PDT
Committed r263355: <https://trac.webkit.org/changeset/263355> All reviewed patches have been landed. Closing bug and clearing flags on attachment 402355 [details].
Radar WebKit Bug Importer
Comment 3 2020-06-22 10:02:16 PDT
Note You need to log in before you can comment on or make changes to this bug.