Fix build error with release build and "#define LOG_DISABLED 0" https://bugs.webkit.org/show_bug.cgi?id=213420

Reviewed by Sam Weinig.

AnimationBase::updateStateMachine() uses LOG_ERROR so needs to test ERROR_DISABLED not LOG_DISABLED.

* page/animation/AnimationBase.cpp:
(WebCore::AnimationBase::updateStateMachine):


Canonical link: https://commits.webkit.org/226261@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263355 268f45cc-cd09-0410-ab3c-d52691b4dbfc